--- a/mon-site/css/cnam.css
+++ b/mon-site/css/cnam.css
@@ -12,6 +12,7 @@ body {
     font-family: sans-serif;
     font-size: 1.5em;
     display: flex;
+    visibility: hidden;
     align-items: center;
     justify-content: center;
     box-shadow: 0px 0px 10px rgba(200, 200, 200, 0.3);
@@ -24,6 +25,7 @@ body {
     width: 250px;
     height: 150px;
     display: flex;
+    visibility: hidden;
     align-items: center;
     justify-content: center;
     color: floralwhite;
@@ -37,6 +39,7 @@ body {
     width: 250px;
     height: 150px;
     display: flex;
+    visibility: hidden;
     align-items: center;
     justify-content: center;
     color: floralwhite;
@@ -50,6 +53,7 @@ body {
     width: 250px;
     height: 150px;
     display: flex;
+    visibility: hidden;
     align-items: center;
     justify-content: center;
     color: floralwhite;
